[gd_scene load_steps=9 format=3 uid="uid://1bjk8xmutmwv"]

[ext_resource type="Texture2D" uid="uid://crpihki1ptqkj" path="res://Png/LevelsBackgorunds/MarbleBackground.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cvh3gsvhgqsq3" path="res://Png/LevelsBackgorunds/rock.png" id="2"]
[ext_resource type="PackedScene" path="res://Door.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://c4gy3ad6l7clg" path="res://KnightPlayer.tscn" id="4"]
[ext_resource type="Script" path="res://Script/Level2.gd" id="5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eh3p6"]
texture = ExtResource("2")
texture_region_size = Vector2i(19, 19)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="5"]
sources/0 = SubResource("TileSetAtlasSource_eh3p6")

[sub_resource type="CircleShape2D" id="10"]
radius = 32.0

[node name="Level2" type="Node2D"]
script = ExtResource("5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(160, 90)
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(0, 0, 320, 180)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("5")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 131072, 0, -65535, 131072, 0, -65534, 131072, 0, -65533, 131072, 0, -65532, 131072, 0, -65531, 131072, 0, -65530, 131072, 0, -65529, 131072, 0, -65528, 131072, 0, -65527, 131072, 0, -65526, 131072, 0, -65525, 131072, 0, -65524, 131072, 0, -65523, 131072, 0, -65522, 131072, 0, -65521, 131072, 0, -65520, 131072, 0, -65519, 131072, 0, -65518, 131072, 0, -65517, 131072, 0, 20, 131072, 0, 65556, 131072, 0, 131092, 131072, 0, 196628, 131072, 0, 262164, 131072, 0, 327700, 131072, 0, 393236, 131072, 0, 458772, 131072, 0, 524308, 131072, 0, 589844, 131072, 0, 655380, 131072, 0, 720915, 131072, 0, 720914, 131072, 0, 720913, 131072, 0, 720912, 131072, 0, 720911, 131072, 0, 720910, 131072, 0, 720909, 131072, 0, 720908, 131072, 0, 720907, 131072, 0, 720902, 131072, 0, 720903, 131072, 0, 720904, 131072, 0, 720905, 131072, 0, 720906, 131072, 0, 720901, 131072, 0, 720900, 131072, 0, 720899, 131072, 0, 720898, 131072, 0, 720897, 131072, 0, 720896, 131072, 0, 720895, 131072, 0, 655359, 131072, 0, 589823, 131072, 0, 524287, 131072, 0, 458751, 131072, 0, 393215, 131072, 0, 327679, 131072, 0, 262143, 131072, 0, 196607, 131072, 0, 131071, 131072, 0, 65535, 131072, 0, 0, 131072, 0, 19, 131072, 0, 655379, 131072, 0, 655360, 131072, 0, 3, 65536, 0, 65539, 65536, 0, 131075, 65536, 0, 196611, 65536, 0, 655363, 65536, 0, 655364, 65536, 0, 589828, 65536, 0, 524292, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 8, 65536, 0, 65544, 65536, 0, 131080, 65536, 0, 655369, 65536, 0, 589833, 65536, 0, 524297, 65536, 0, 458761, 65536, 0, 458762, 65536, 0, 12, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 655373, 65536, 0, 589837, 65536, 0, 524301, 65536, 0, 458765, 65536, 0, 589838, 65536, 0, 655377, 65536, 0, 589841, 65536, 0, 524305, 65536, 0, 458766, 65536, 0, 458754, 65536, 0, 524289, 65536, 0, 131074, 65536, 0, 131079, 65536, 0, 196620, 65536, 0, 196619, 65536, 0, 196616, 65536, 0, 16, 65536, 0, 65552, 65536, 0, 131088, 65536, 0, 131087, 65536, 0, 589830, 65536, 0)

[node name="Door" parent="." instance=ExtResource("3")]
position = Vector2(320, 48)

[node name="Sprite2D" parent="Door" index="0"]
texture_filter = 1

[node name="Area2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
position = Vector2(312, 40)
shape = SubResource("10")

[node name="KnightPlayer" parent="." instance=ExtResource("4")]
position = Vector2(7, 101)

[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
[connection signal="body_exited" from="Area2" to="." method="_on_Area2_body_exited"]

[editable path="Door"]
